--- a/Alcatraz Escape/The Hole/View/TheHole.storyboard
+++ b/Alcatraz Escape/The Hole/View/TheHole.storyboard
@@ -18,22 +18,23 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qNO-ko-uHN" customClass="PuzzleCollectionView" customModule="Alcatraz_Escape" customModuleProvider="target">
                                 <rect key="frame" x="644.5" y="10" width="141.5" height="373"/>
                                 <color key="backgroundColor" red="0.0" green="0.72941176470000002" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="q06-oo-9Qe">
-                                    <size key="itemSize" width="73" height="72"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" sectionInsetReference="layoutMargins" id="q06-oo-9Qe">
+                                    <size key="itemSize" width="70" height="70"/>
+                                    <size key="estimatedItemSize" width="70" height="70"/>
+                                    <size key="headerReferenceSize" width="10" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyCell" id="SU0-QY-xVd" customClass="PuzzleCollectionViewCell" customModule="Alcatraz_Escape" customModuleProvider="target">
-                                        <rect key="frame" x="34.5" y="0.0" width="73" height="72"/>
+                                        <rect key="frame" x="34.5" y="8" width="73" height="72"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="73" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TYf-oi-cGY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="68"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="72"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <gestureRecognizers/>
                                                 </imageView>
@@ -46,10 +47,12 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CollectionView" id="OeO-5b-UMd">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
                             </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nqp-6W-Kcv" customClass="Grid" customModule="Alcatraz_Escape" customModuleProvider="target" colorLabel="IBBuiltInLabel-Orange">
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nqp-6W-Kcv" customClass="Grid" customModule="Alcatraz_Escape" customModuleProvider="target" colorLabel="IBBuiltInLabel-Orange">
                                 <rect key="frame" x="261.5" y="10" width="373" height="373"/>
-                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Nqp-6W-Kcv" secondAttribute="height" multiplier="1:1" id="HFb-Gs-MYW"/>
                                 </constraints>
@@ -68,12 +71,6 @@
                                     <action selector="hintButton:" destination="bKt-p6-DLz" eventType="touchUpInside" id="Kom-dz-5sL"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ds7-rM-8bw">
-                                <rect key="frame" x="54" y="201.5" width="197.5" height="181.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -81,29 +78,22 @@
                             <constraint firstItem="Nqp-6W-Kcv" firstAttribute="centerX" secondItem="Cv5-qL-f5o" secondAttribute="centerX" id="41a-MA-dyM"/>
                             <constraint firstItem="3Ft-QN-cce" firstAttribute="leading" secondItem="F1o-fF-r2E" secondAttribute="leading" constant="10" id="5Ot-N9-Cwt"/>
                             <constraint firstItem="qNO-ko-uHN" firstAttribute="leading" secondItem="Nqp-6W-Kcv" secondAttribute="trailing" constant="10" id="FYX-M3-g8v"/>
-                            <constraint firstItem="ds7-rM-8bw" firstAttribute="width" secondItem="3EP-PT-XaK" secondAttribute="width" id="H8z-hE-zCa"/>
                             <constraint firstItem="3EP-PT-XaK" firstAttribute="width" secondItem="3Ft-QN-cce" secondAttribute="width" id="KOT-Vc-MIv"/>
                             <constraint firstAttribute="bottomMargin" secondItem="qNO-ko-uHN" secondAttribute="bottom" constant="10" id="KlQ-UF-8Q3"/>
                             <constraint firstItem="Nqp-6W-Kcv" firstAttribute="top" secondItem="F1o-fF-r2E" secondAttribute="top" constant="10" id="OGH-gn-YZu"/>
                             <constraint firstItem="3EP-PT-XaK" firstAttribute="leading" secondItem="F1o-fF-r2E" secondAttribute="leading" constant="10" id="OtE-FZ-0at"/>
-                            <constraint firstItem="ds7-rM-8bw" firstAttribute="height" secondItem="3EP-PT-XaK" secondAttribute="height" id="QDb-LF-EoQ"/>
-                            <constraint firstItem="F1o-fF-r2E" firstAttribute="bottom" secondItem="ds7-rM-8bw" secondAttribute="bottom" constant="10" id="RKq-hU-B6h"/>
                             <constraint firstItem="F1o-fF-r2E" firstAttribute="bottom" secondItem="3EP-PT-XaK" secondAttribute="bottom" constant="10" id="SsF-fB-304"/>
-                            <constraint firstItem="Nqp-6W-Kcv" firstAttribute="leading" secondItem="ds7-rM-8bw" secondAttribute="trailing" constant="10" id="Upy-d3-nYU"/>
                             <constraint firstItem="F1o-fF-r2E" firstAttribute="bottom" secondItem="Nqp-6W-Kcv" secondAttribute="bottom" constant="10" id="XlZ-KJ-TUP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qNO-ko-uHN" secondAttribute="trailing" constant="50" id="a18-FY-AAy"/>
                             <constraint firstItem="3EP-PT-XaK" firstAttribute="height" secondItem="3Ft-QN-cce" secondAttribute="height" id="bvQ-sp-Twl"/>
-                            <constraint firstItem="ds7-rM-8bw" firstAttribute="top" secondItem="3Ft-QN-cce" secondAttribute="bottom" constant="10" id="d01-ZR-YsR"/>
                             <constraint firstItem="qNO-ko-uHN" firstAttribute="top" secondItem="F1o-fF-r2E" secondAttribute="top" constant="10" id="fPi-fU-pxq"/>
                             <constraint firstItem="3Ft-QN-cce" firstAttribute="top" secondItem="F1o-fF-r2E" secondAttribute="top" constant="10" id="hxz-6l-GON"/>
-                            <constraint firstItem="ds7-rM-8bw" firstAttribute="leading" secondItem="F1o-fF-r2E" secondAttribute="leading" constant="10" id="jFb-bE-6kK"/>
                             <constraint firstItem="Nqp-6W-Kcv" firstAttribute="leading" secondItem="3EP-PT-XaK" secondAttribute="trailing" constant="10" id="twe-8g-fBc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="F1o-fF-r2E"/>
                     </view>
                     <connections>
                         <outlet property="completionButton" destination="3Ft-QN-cce" id="hy6-Et-Sb7"/>
-                        <outlet property="countDownTimer" destination="ds7-rM-8bw" id="wpn-fy-cuG"/>
                         <outlet property="hintButton" destination="3EP-PT-XaK" id="sx4-G3-ILa"/>
                         <outlet property="puzzleCollectionView" destination="qNO-ko-uHN" id="xVX-Tg-jEA"/>
                         <outlet property="puzzleGrid" destination="Nqp-6W-Kcv" id="6w6-bD-77N"/>
