--- a/Alcatraz Escape/First Cell Visit/View/FirstCellVisit.storyboard
+++ b/Alcatraz Escape/First Cell Visit/View/FirstCellVisit.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bKt-p6-DLz">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,15 +12,50 @@
             <objects>
                 <viewController id="bKt-p6-DLz" customClass="FirstCellVisitViewController" customModule="Alcatraz_Escape" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Cv5-qL-f5o">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OzD-Of-xbG">
+                                <rect key="frame" x="344" y="20" width="208" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="J9h-kN-H0v"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="numberTextField:" destination="bKt-p6-DLz" eventType="editingDidEnd" id="QLq-QJ-hXn"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0y-xa-fxD">
+                                <rect key="frame" x="294" y="54" width="308" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="W6h-wQ-ZfN"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="responseButton:" destination="bKt-p6-DLz" eventType="touchUpInside" id="qo6-my-CfA"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="q0y-xa-fxD" firstAttribute="top" secondItem="OzD-Of-xbG" secondAttribute="bottom" id="6ZX-fD-mOr"/>
+                            <constraint firstItem="F1o-fF-r2E" firstAttribute="trailing" secondItem="OzD-Of-xbG" secondAttribute="trailing" constant="300" id="AtH-7K-DRH"/>
+                            <constraint firstItem="OzD-Of-xbG" firstAttribute="top" secondItem="F1o-fF-r2E" secondAttribute="top" constant="20" id="BFr-Ii-vvd"/>
+                            <constraint firstItem="q0y-xa-fxD" firstAttribute="leading" secondItem="F1o-fF-r2E" secondAttribute="leading" constant="250" id="rAN-3r-1y5"/>
+                            <constraint firstItem="F1o-fF-r2E" firstAttribute="trailing" secondItem="q0y-xa-fxD" secondAttribute="trailing" constant="250" id="v1P-kG-ca7"/>
+                            <constraint firstItem="OzD-Of-xbG" firstAttribute="leading" secondItem="F1o-fF-r2E" secondAttribute="leading" constant="300" id="zef-zp-6Nc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="F1o-fF-r2E"/>
                     </view>
+                    <connections>
+                        <outlet property="numberTextField" destination="OzD-Of-xbG" id="ypH-jU-Uiw"/>
+                        <outlet property="responseButton" destination="q0y-xa-fxD" id="WPE-SD-aIN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vn9-pJ-Yao" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="119" y="125"/>
+            <point key="canvasLocation" x="118.52678571428571" y="124.6376811594203"/>
         </scene>
     </scenes>
 </document>
